# zapril-python-cli-job-scapper

./: .dockerignore  .gitignore  Dockerfile  NEW_PLAN.md  PHASE_2_PLAN.md  README.md  RECOMMENDED_FEATURES.md  app.py  cities.json  cities.txt  config.py  implementation_plan.md  job_titles.json  job_titles.txt  main.py  output.md  pyproject.toml  reprocess_ai.py  requirements.txt  schedule_runner.py  searches.json  settings.json
admin/: package-lock.json  package.json  vite.config.js
admin/scratch/: check_dates.py
admin/src/: App.jsx  index.css
cache/: company_locations.json
exporters/: __init__.py  exporter.py  sql_exporter.py
live-site/: index.html  package-lock.json  package.json
live-site/src/: App.jsx  index.css
output/: companies_in_mumbai_2026-04-09_18-37.txt  companies_in_mumbai_2026-04-09_18-40.txt  companies_in_mumbai_2026-04-09_18-51.txt  jobs_software_engineer_mumbai_2026-04-09_18-37.csv  jobs_software_engineer_mumbai_2026-04-09_18-40.csv  jobs_software_engineer_mumbai_2026-04-09_18-51.csv
output/jobs_web_developer_mumbai_2026-04-09_19-24/: companies_in_mumbai_2026-04-09_19-24.txt  jobs_web_developer_mumbai_2026-04-09_19-24.csv  (+1 more)
processors/: __init__.py  ai_enrichment_runner.py  date_parser.py  deduplicator.py  description_improver.py  location_resolver.py
scrapers/: __init__.py  glassdoor_scraper.py  google_jobs_scraper.py  internshala_scraper.py  jobspy_scraper.py  naukri_scraper.py
scratch/: check_db.py  check_schema.py  check_schema_v2.py  clear_db.py  db_cleanup.py  list_models.py  test_ai.py  test_date_parser.py
(+2 files in other folders)
