[project]
name = "job-scapper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "curl-cffi>=0.15.0",
    "geopy",
    "pandas",
    "playwright",
    "playwright-stealth>=2.0.3",
    "python-jobspy",
    "rapidfuzz",
    "requests",
    "rich",
    "SQLAlchemy>=2.0.0",
    "pg8000>=1.30.0",
    "pymysql>=1.1.0",
]
